8223573: Replace wildcard address with loopback or local host in tests - part 4
Makes a few intermittently failing tests more resilient to port reuse issues by ensuring they bind to the loopback address instead of the wildcard.

Reviewed-by: alanb, chegar